Improvements to the header and the navigation bar

--- a/index.html
+++ b/index.html
@@ -10,28 +10,40 @@
 </head>
 
 <body>
-    <header class="main-header">
-        <div class="main-header__content">
-            <h1 class="main-header__title">Genius Web & Talos Inc.</h1>
-            <p class="main-header__description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    <div class="main-banner">
+        <div class="main-banner__content">
+            <h1 class="main-banner__title">Genius Web & Talos Inc.</h1>
+            <p class="main-banner__description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam lorem ipsum dolor sit amet.
             </p>
-            <a id="main-header__learn-more" href="#services">LEARN MORE</a>
-            <a id="main-header__contact" href="#contact">CONTACT US</a>
+            <a id="main-banner__learn-more" href="#services">LEARN MORE</a>
+            <a id="main-banner__contact" href="#contact">CONTACT US</a>
         </div>
+    </div>
+    <header class="main-header">
+        <div class="main-header__buttons">
+            <h2 class="main-header__title">Talos</h2>
+            <button class="toggle-button">
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+            </button>
+        </div>
+
+        <nav class="main-nav">
+            <ul class="main-nav__items">
+                <li class="main-nav__item"><a href="#services">Home</a></li>
+                <li class="main-nav__item"><a href="#services">Services</a></li>
+                <li class="main-nav__item"><a href="#about">About</a></li>
+                <li class="main-nav__item"><a href="#team">Team</a></li>
+                <li class="main-nav__item"><a href="#portfolio">Portfolio</a></li>
+                <li class="main-nav__item"><a href="#blog">Blog</a></li>
+                <li class="main-nav__item"><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+
     </header>
 
-    <nav class="main-nav">
-        <h1>Talos</h1>
-        <ul class="main-nav__items">
-            <li class="main-nav__item"><a href="#services">Services</a></li>
-            <li class="main-nav__item"><a href="#about">About</a></li>
-            <li class="main-nav__item"><a href="#team">Team</a></li>
-            <li class="main-nav__item"><a href="#portfolio">Portfolio</a></li>
-            <li class="main-nav__item"><a href="#blog">Blog</a></li>
-            <li class="main-nav__item"><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
 
     <main>
         <section id="services">
@@ -78,7 +90,7 @@
                 </li>
             </ul>
         </section>
-
+        <!--
         <section id="about">
             <h1 class="section-title">Genius Studio</h1>
             <p class="section-desctiption">
@@ -86,8 +98,7 @@
                 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem
                 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
-            <div class="about__video"><iframe width="560" height="315" src="https://www.youtube.com/embed/Dv7gLpW91DM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><video src="https://www.youtube.com/watch?v=Dv7gLpW91DM"></video>
-            </div>
+            <div class="about__video">Video</div>
         </section>
 
         <section id="team">
@@ -160,31 +171,31 @@
     </main>
 
 
-
-    <footer class="main-footer">
-        <p>Copyright Talos Inc HTML Template | All Rights Reserved.</p>
-        <ul class="main-footer__items">
-            <li class="main-footer__item">
-                <a href="#"></a>
-            </li>
-            <li class="main-footer__item">
-                <a href="#"></a>
-            </li>
-            <li class="main-footer__item">
-                <a href="#"></a>
-            </li>
-            <li class="main-footer__item">
-                <a href="#"></a>
-            </li>
-            <li class="main-footer__item">
-                <a href="#"></a>
-            </li>
-            <li class="main-footer__item">
-                <a href="#"></a>
-            </li>
-        </ul>
-    </footer>
-    <script src="./scripts/main.js"></script>
+-->
+        <footer class="main-footer">
+            <p>Copyright Talos Inc HTML Template | All Rights Reserved.</p>
+            <ul class="main-footer__items">
+                <li class="main-footer__item">
+                    <a href="#"></a>
+                </li>
+                <li class="main-footer__item">
+                    <a href="#"></a>
+                </li>
+                <li class="main-footer__item">
+                    <a href="#"></a>
+                </li>
+                <li class="main-footer__item">
+                    <a href="#"></a>
+                </li>
+                <li class="main-footer__item">
+                    <a href="#"></a>
+                </li>
+                <li class="main-footer__item">
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </footer>
+        <script src="./scripts/main.js"></script>
 </body>
 
 </html>
