--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
-    <link rel="stylesheet" href="./styles/resources.css">
-    <link rel="stylesheet" href="./styles/main.css">
-
+    <link rel="stylesheet" href="styles/resources.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -115,7 +114,7 @@
             <ul class="team__list">
                 <li class="team__member" onmouseover="showMemberSocialMedia(this)" onmouseout="hideMemberSocialMedia(this)">
                     <div class="team__container">
-                        <img class="team__member-img" src="./images/team_1.jpg">
+                        <img class="team__member-img" src="images/team_1.jpg">
                         <div class="team__social-media">
                             <div class="icon-facebook team__icon"></div>
                             <div class="icon-twitter team__icon"></div>
@@ -129,7 +128,7 @@
                 </li>
                 <li class="team__member" onmouseover="showMemberSocialMedia(this)" onmouseout="hideMemberSocialMedia(this)">
                     <div class="team__container">
-                        <img class="team__member-img" src="./images/team_2.jpg">
+                        <img class="team__member-img" src="images/team_2.jpg">
                         <div class="team__social-media">
                             <div class="icon-facebook team__icon"></div>
                             <div class="icon-twitter team__icon"></div>
@@ -142,7 +141,7 @@
                 </li>
                 <li class="team__member" onmouseover="showMemberSocialMedia(this)" onmouseout="hideMemberSocialMedia(this)">
                     <div class="team__container">
-                        <img class="team__member-img" src="./images/team_3.jpg">
+                        <img class="team__member-img" src="images/team_3.jpg">
                         <div class="team__social-media">
                             <div class="icon-facebook team__icon"></div>
                             <div class="icon-twitter team__icon"></div>
@@ -169,7 +168,7 @@
                         <h1>Illustration</h1>
                         <h2>Graphic / Illustration / Poster</h2>
                     </div>
-                    <img src="./images/portfolio-img1.jpg" />
+                    <img src="images/portfolio-img1.jpg" />
                 </li>
                 <li class="portfolio__item" onmouseover="showPortfolioHover(this)" onmouseout="hidePortfolioHover(this)">
                     <div class="portfolio__hover">
@@ -177,7 +176,7 @@
                         <h1>Illustration</h1>
                         <h2>Graphic / Illustration / Poster</h2>
                     </div>
-                    <img src="./images/portfolio-img2.jpg" />
+                    <img src="images/portfolio-img2.jpg" />
                 </li>
                 <li class="portfolio__item" onmouseover="showPortfolioHover(this)" onmouseout="hidePortfolioHover(this)">
                     <div class="portfolio__hover">
@@ -185,7 +184,7 @@
                         <h1>Illustration</h1>
                         <h2>Graphic / Illustration / Poster</h2>
                     </div>
-                    <img src="./images/portfolio-img3.jpg" />
+                    <img src="images/portfolio-img3.jpg" />
                 </li>
                 <li class="portfolio__item" onmouseover="showPortfolioHover(this)" onmouseout="hidePortfolioHover(this)">
                     <div class="portfolio__hover">
@@ -193,7 +192,7 @@
                         <h1>Illustration</h1>
                         <h2>Graphic / Illustration / Poster</h2>
                     </div>
-                    <img src="./images/portfolio-img4.jpg" />
+                    <img src="images/portfolio-img4.jpg" />
                 </li>
                 <li class="portfolio__item" onmouseover="showPortfolioHover(this)" onmouseout="hidePortfolioHover(this)">
                     <div class="portfolio__hover">
@@ -201,7 +200,7 @@
                         <h1>Illustration</h1>
                         <h2>Graphic / Illustration / Poster</h2>
                     </div>
-                    <img src="./images/portfolio-img5.jpg" />
+                    <img src="images/portfolio-img5.jpg" />
                 </li>
                 <li class="portfolio__item" onmouseover="showPortfolioHover(this)" onmouseout="hidePortfolioHover(this)">
                     <div class="portfolio__hover">
@@ -209,7 +208,7 @@
                         <h1>Illustration</h1>
                         <h2>Graphic / Illustration / Poster</h2>
                     </div>
-                    <img src="./images/portfolio-img6.jpg" />
+                    <img src="images/portfolio-img6.jpg" />
                 </li>
             </ul>
         </section>
@@ -288,7 +287,7 @@
             <!-- Implementation based on https://www.w3schools.com/howto/howto_js_slideshow.asp-->
             <div class="carousel">
                 <div class="carousel-slide fade">
-                    <img class="testimonial-image" src="./images/testimonial-img1.jpg" alt="Testimonial-1">
+                    <img class="testimonial-image" src="images/testimonial-img1.jpg" alt="Testimonial-1">
                     <div class="testimonial-description">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor
@@ -298,7 +297,7 @@
                     </div>
                 </div>
                 <div class="carousel-slide fade">
-                    <img class="testimonial-image" src="./images/testimonial-img2.jpg" alt="Testimonial-2">
+                    <img class="testimonial-image" src="images/testimonial-img2.jpg" alt="Testimonial-2">
                     <div class="testimonial-description">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor
@@ -308,7 +307,7 @@
                     </div>
                 </div>
                 <div class="carousel-slide fade">
-                    <img class="testimonial-image" src="./images/testimonial-img3.jpg" alt="Testimonial-1">
+                    <img class="testimonial-image" src="images/testimonial-img3.jpg" alt="Testimonial-1">
                     <div class="testimonial-description">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor
@@ -318,7 +317,7 @@
                     </div>
                 </div>
                 <div class="carousel-slide fade">
-                    <img class="testimonial-image" src="./images/testimonial-img1.jpg" alt="Testimonial-1">
+                    <img class="testimonial-image" src="images/testimonial-img1.jpg" alt="Testimonial-1">
                     <div class="testimonial-description">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor
@@ -328,7 +327,7 @@
                     </div>
                 </div>
                 <div class="carousel-slide fade">
-                    <img class="testimonial-image" src="./images/testimonial-img2.jpg" alt="Testimonial-1">
+                    <img class="testimonial-image" src="images/testimonial-img2.jpg" alt="Testimonial-1">
                     <div class="testimonial-description">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.Lorem ipsum dolor
@@ -374,7 +373,7 @@
             <li class="footer-icon icon-google-plus "></li>
         </ul>
     </footer>
-    <script src="./scripts/main.js "></script>
+    <script src="scripts/main.js "></script>
 </body>
 
 </html>
