--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                     <div class="fs1 services__icon" aria-hidden="true" data-icon="&#xe01b;"></div>
                     <h2>Web Design</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore <span class="highlighted">et dolore magna aliqua.</span> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut aliquip ex ea commodo consequat.
                     </p>
                 </li>
                 <li class="services__list-item">
