Double quotes and inline styles removed

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <li class="team__member" onmouseover="showMemberSocialMedia(this)" onmouseout="hideMemberSocialMedia(this)">
                     <div class="team__container">
                         <img class="team__member-img" src="images/team_1.jpg">
-                        <div class="team__social-media">
+                        <div class="team__social-media hidden">
                             <div class="icon-facebook team__icon"></div>
                             <div class="icon-twitter team__icon"></div>
                             <div class="icon-dribbble team__icon"></div>
@@ -143,7 +143,7 @@
                 <li class="team__member" onmouseover="showMemberSocialMedia(this)" onmouseout="hideMemberSocialMedia(this)">
                     <div class="team__container">
                         <img class="team__member-img" src="images/team_2.jpg">
-                        <div class="team__social-media">
+                        <div class="team__social-media hidden">
                             <div class="icon-facebook team__icon"></div>
                             <div class="icon-twitter team__icon"></div>
                             <div class="icon-dribbble team__icon"></div>
@@ -156,7 +156,7 @@
                 <li class="team__member" onmouseover="showMemberSocialMedia(this)" onmouseout="hideMemberSocialMedia(this)">
                     <div class="team__container">
                         <img class="team__member-img" src="images/team_3.jpg">
-                        <div class="team__social-media">
+                        <div class="team__social-media hidden">
                             <div class="icon-facebook team__icon"></div>
                             <div class="icon-twitter team__icon"></div>
                             <div class="icon-dribbble team__icon"></div>
